--- a/hypertensiontea_app/templates/index.html
+++ b/hypertensiontea_app/templates/index.html
@@ -24,7 +24,7 @@
     <!-- AJAX QUERY -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!--   Facebook Pixel Code   -->
-<!--      Pixel ID: 3793509907421516 -->
+     Pixel ID: 3793509907421516
     <!-- Custom JS -->
     <title>24Hours Health Remedy Stores | Hypertension Tea</title>
   </head>
